# Team-12

./: README.md  Team-12.ppk  Team-12_Server_Details.txt  package-lock.json  package.json  pyproject.toml
mobile-web-app/: .env  .gitignore  items.json  package-lock.json  package.json  project.txt
mobile-web-app/server/: .env  package-lock.json  package.json  server.js  test_script.js
mobile-web-app/server/Controllers/: adminControllers.js  applicationControllers.js  pointController.js  userControllers.js
mobile-web-app/server/Models/: Admin.js  Application.js  Client.js  ClientType.js  LifeSkillType.js  LifeSkills.js  Mentee.js  Mentor.js  NotificationLevel.js  NotificationType.js  Notifications.js  User.js  UserRole.js  UserType.js  message.js  points.js
mobile-web-app/server/routes/: adminRoutes  applicationRoutes.js  pointRoutes.js  userRoutes.js
mobile-web-app/src/: App.css  App.js
mobile-web-app/src/components/: ApplicantTable.js  EmergencyBanner.js  EmergencyButton.js  LessonDetails.js  Navbar.js  PopupChat.js  TimeLine.js
mobile-web-app/src/data/: career-readiness.js  cooking.js  financial-literacy.js  stress-management.js
mobile-web-app/src/pages/: AdminDashboard.js  AdminLandingPage.js  Apply.js  Calendar.js  ChatRoom.js  Contact.js  EmergencyContact.js  LifeSkills.js  (+7 more)
storm_platform/: __init__.py  config.py  model.py
storm_platform/api/: __init__.py  element.py
storm_platform/templates/: create.html  delete.html  edit.html  index.html  login.html  password.html
storm_platform/views/: __init__.py  accounts.py  index.py  login.py  uploads.py
(+1 files in other folders)
